--- a/html/page_Arrays.html
+++ b/html/page_Arrays.html
@@ -640,6 +640,12 @@ actual array length.
    
    PtrLen&lt;T&gt; extend(BuilderType&lt;T&gt; builder);
    
+   template &lt;class S,FuncInitType&lt;T,S&gt; FuncInit&gt;
+   PtrLen&lt;T&gt; extend_transform(PtrLen&lt;S&gt; src,FuncInit func_init);
+
+   template &lt;class S,FuncInitType&lt;T,S&gt; FuncInit&gt;
+   PtrLen&lt;T&gt; extend_transform_nothrow(PtrLen&lt;S&gt; src,FuncInit func_init);
+
 </pre>   
 
 <p>
@@ -680,9 +686,15 @@ created using the default constructor and swapped with members of the range <b>o
 </p>
 
 <p>
-Two final <b>extend()</b> are generic. The first of them uses the given <b>Creator</b> object to create 
+Two following <b>extend()</b> are generic. The first of them uses the given <b>Creator</b> object to create 
 new elements, and the second uses the <b>Builder</b>. See <a href="#Creator">below</a> explanations about <b>Creator</b>s and
 <b>Builder</b>s.
+</p>
+
+<p>
+<b>extend_transform()</b> and <b>extend_transform_nothrow()</b> extends array on transformed output from the given range.
+The second argument is a functor, it is called per each element of the input range &mdash; the first argument. 
+The resulting sequence of objects extends the array. Use <b>nothrow</b> variant if the functor is "nothrow".
 </p>
 
 <pre>
@@ -882,6 +894,12 @@ class <span class="Att">RefArray</span>
    
    PtrLen&lt;T&gt; extend(BuilderType&lt;T&gt; builder);
    
+   template &lt;class S,FuncInitType&lt;T,S&gt; FuncInit&gt;
+   PtrLen&lt;T&gt; extend_transform(PtrLen&lt;S&gt; src,FuncInit func_init);
+
+   template &lt;class S,FuncInitType&lt;T,S&gt; FuncInit&gt;
+   PtrLen&lt;T&gt; extend_transform_nothrow(PtrLen&lt;S&gt; src,FuncInit func_init);
+
    // append
    
    T * append_raw();
@@ -1126,6 +1144,12 @@ modifying operations).
    PtrLen&lt;T&gt; extend(ulen delta_len,CreatorType&lt;T&gt; creator);
    
    PtrLen&lt;T&gt; extend(BuilderType&lt;T&gt; builder);
+   
+   template &lt;class S,FuncInitType&lt;T,S&gt; FuncInit&gt;
+   PtrLen&lt;T&gt; extend_transform(PtrLen&lt;S&gt; src,FuncInit func_init);
+
+   template &lt;class S,FuncInitType&lt;T,S&gt; FuncInit&gt;
+   PtrLen&lt;T&gt; extend_transform_nothrow(PtrLen&lt;S&gt; src,FuncInit func_init);
    
    // append
    
@@ -1902,6 +1926,32 @@ struct <span class="Att">Creator_swap</span>
    {
     return Algo::Create_swap(place,*(objs++));
    }
+ };
+
+/* struct Creator_transform&lt;T,S,FuncInit,bool NoThrow&gt; */
+
+template &lt;class T,class S,FuncInitType&lt;T,S&gt; FuncInit,bool NoThrow_&gt;
+struct Creator_transform
+ {
+  enum NoThrowFlagType { NoThrow = NoThrow_ };
+
+  S *src;
+  FuncInit func_init;
+
+  Creator_transform(S *src_,const FuncInit &amp;func_init_) : src(src_),func_init(func_init_) {}
+
+  struct FunctorType : NoCopy
+   {
+    S *src;
+    FunctorTypeOf&lt;FuncInit&gt; func;
+
+    explicit FunctorType(Creator_transform init) : src(init.src),func(init.func_init) {}
+
+    T * operator () (Place&lt;void&gt; place) noexcept(NoThrow)
+     {
+      return new(place) T( func(*(src++)) );
+     }
+   };
  };
 
 </pre>
